--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "less-plugin-autoprefix": "^1.5.1",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
