--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "^3.5.3",
     "element-ui": "^1.2.8",
     "fetch-jsonp": "^1.0.6",
+    "impress.js": "^0.6.0",
     "jquery": "^3.2.1",
     "localforage": "^1.5.0",
     "postcss": "^5.2.17",
