--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "impress.js": "^0.6.0",
     "jquery": "^3.2.1",
     "localforage": "^1.5.0",
+    "moment": "^2.18.1",
     "postcss": "^5.2.17",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
